--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3000
-MONGO_URI=mongodb://root:password@host:27017/userdb
+MONGO_URI=mongodb://root:GCX0mGSgxhtK7mcpnHUptaB1@172.21.238.5:27017/userdb?authSource=admin
 JWT_SECRET=supersecretkey
 JWT_EXPIRES_IN=1d
